Use pinned legacy model constructors and record official page compatibility honestly